--- a/package.json
+++ b/package.json
@@ -10,11 +10,18 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/check": "^0.9.4",
     "@astrojs/mdx": "^3.1.9",
     "@astrojs/rss": "^4.0.9",
     "@astrojs/sitemap": "^3.2.1",
     "astro": "^4.16.8",
-    "@astrojs/check": "^0.9.4",
+    "astro-icon": "^1.1.1",
+    "mdast-util-to-string": "^4.0.0",
+    "reading-time": "^1.5.0",
+    "remark-html": "^16.0.1",
     "typescript": "^5.6.3"
+  },
+  "devDependencies": {
+    "sass-embedded": "^1.80.5"
   }
 }
