--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,16 @@
 {
   "extends": "astro/tsconfigs/strict",
   "compilerOptions": {
-    "strictNullChecks": true
+    "baseUrl": ".",
+    "strictNullChecks": true,
+    "noImplicitAny": false,
+    "paths": {
+        "@components/*": ["src/components/*"],
+        "@layouts/*": ["src/layouts/*"],
+        "@pages/*": ["src/pages/*"],
+        "@styles/*": ["src/styles/*"],
+        "@static/*": ["static/*"],
+        "@models/*": ["src/models/*"]
+    }
   }
 }
